force-app/main/default/objects/User/fields/APXT_Redlining__Contract_Agreement_Role__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__Contract_Agreement_Role__c</fullName>
    <label>Contract Agreement Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>APXT_Redlining__Contract_Agreement_Role</valueSetName>
    </valueSet>
</CustomField>