force-app/main/default/objects/User/fields/FSTR__Document_Merge_URL__c.field-meta.xml
<CustomField>
    <fullName>FSTR__Document_Merge_URL__c</fullName>
    <formula>$Api.Partner_Server_URL_340</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Merge URL</label>
    <type>Text</type>
</CustomField>