force-app/main/default/objects/User/fields/FSTR__Ignore_PCE_Definition_Initiators__c.field-meta.xml
<CustomField>
    <fullName>FSTR__Ignore_PCE_Definition_Initiators__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box for users that should not evaluate Definition Initiators.  This would typically be checked for an integration user that automatically updates data in the background and does not need to initiate processes.</inlineHelpText>
    <label>Ignore Definition Initiators</label>
    <type>Checkbox</type>
</CustomField>