force-app/main/default/objects/User/fields/FSTR__Notify_on_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FSTR__Notify_on_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field supports the ability to notify someone via task reminders that a new task has been assigned to them.</inlineHelpText>
    <label>Notify on Assignment</label>
    <type>Checkbox</type>
</CustomField>