force-app/main/default/objects/User/fields/FSTR__Out_of_Office_End__c.field-meta.xml
<CustomField>
    <fullName>FSTR__Out_of_Office_End__c</fullName>
    <inlineHelpText>Select a date and time that your Out of Office will end.  During this time period all of your tasks will be assigned to the user designated in the Out of Office Replacement User field.</inlineHelpText>
    <label>Out of Office End</label>
    <type>DateTime</type>
</CustomField>