force-app/main/default/objects/User/fields/FSTR__Out_of_Office_Replacement_User__c.field-meta.xml
<CustomField>
    <fullName>FSTR__Out_of_Office_Replacement_User__c</fullName>
    <inlineHelpText>Select a user that will be assigned your tasks while you are out of the office</inlineHelpText>
    <label>Out of Office Replacement User</label>
    <relationshipName>Replaced_Users</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>