force-app/main/default/objects/User/fields/Integration_Tenant_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Integration_Tenant_Identifier__c</fullName>
    <label>Integration Tenant Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>