force-app/main/default/objects/User/fields/Training_Event_Approve_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Training_Event_Approve_Assignment__c</fullName>
    <label>Training Event Approve Assignment</label>
    <relationshipName>Training_Event_Approve_Assignment</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>