force-app/main/default/objects/User/listViews/ActiveUsers.listView-meta.xml
<ListView>
    <fullName>ActiveUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>DEFAULT_CURRENCY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Users</label>
    <language>en_US</language>
</ListView>